--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inversify-utils-kit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/innovalombia/backend/inversify-utils-kit.git"
+    "url": "git+ssh://git@github.com/innovalombia/inversify-utils-kit.git"
   },
   "keywords": [
     "typescript",
@@ -29,9 +29,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://gitlab.com/innovalombia/backend/innovalombia-backend-libraries/issues"
+    "url": "https://github.com/innovalombia/inversify-utils-kit/issues"
   },
-  "homepage": "https://gitlab.com/innovalombia/backend/inversify-utils-kit#readme",
+  "homepage": "https://github.com/innovalombia/inversify-utils-kit#readme",
   "engines": {
     "node": ">=18.18.0 <=20.9.0"
   },
