--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,6 @@ sonar.profile=node
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/node_modules/**, **/.vscode/**
 sonar.test.inclusions=**/*.spec.ts
-##sonar.ts.tslintconfigpath=tslint.json
-sonar.tests=test/
+sonar.ts.tslintconfigpath=tslint.json
+sonar.tests=**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
