:recycle: Update code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,13 @@
     "cSpell.words": [
         "apigw",
         "copyfiles",
+        "fdescribe",
         "GWQS",
         "inversify",
         "Millis",
         "PAYU",
         "posix",
-        "rewiremock"
+        "rewiremock",
+        "xdescribe"
     ]
 }
