:recycle: Update config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
         "esModuleInterop": true,
         "declaration": true,
         "target": "es2022",
-        "module": "commonjs",
+        "module": "node16",
         "sourceMap": false,
-        "moduleResolution": "node",
+        "moduleResolution": "node16",
         "rootDir": "./src",
         "baseUrl": "./src",
         "outDir": "./dist",
